[CPDLP-1539] - add teacher catchment fields to API v1
