# app/serializers/api/v1/npq_application_serializer.rb
@@ -24,6 +24,8 @@ module Api
                  :school_urn,
                  :school_ukprn,
                  :status,
+                 :teacher_catchment_country,
+                 :teacher_catchment_iso_country_code,
                  :works_in_school
 
       attribute(:participant_id) do |object|
@@ -66,8 +68,6 @@ module Api
       attribute(:targeted_delivery_funding_eligibility)
 
       attribute :teacher_catchment, &:in_uk_catchment_area?
-      attribute :teacher_catchment_country, &:in_uk_catchment_area?
-
     end
   end
 end
